--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
     "pydantic (>=2.11.2,<3.0.0)",
-    "uvicorn (>=0.34.0,<0.35.0)"
+    "uvicorn (>=0.34.0,<0.35.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 
