--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
 		"flume": "^1.0.4",
 		"gantt-schedule-timeline-calendar": "^3.35.2",
 		"papaparse": "^5.4.1",
+		"qrcode.react": "^4.2.0",
 		"react": "^18.2.0",
 		"react-barcode": "^1.4.6",
 		"react-dom": "^18.2.0",
